linkerd/prevent-linkerd-port-skipping/.chainsaw-test/bad-podcontrollers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
      annotations:
        foo: bar
        config.linkerd.io/skip-inbound-ports: true
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
      annotations:
        config.linkerd.io/skip-outbound-ports: true
        foo: bar
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: baddeploy03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
      annotations:
        foo: bar
        config.linkerd.io/skip-inbound-ports: true
        config.linkerd.io/skip-outbound-ports: true
    spec:
      containers:
      - name: busybox
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            config.linkerd.io/skip-outbound-ports: true
            foo: bar
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            foo: bar
            config.linkerd.io/skip-inbound-ports: true
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        metadata:
          annotations:
            foo: bar
            config.linkerd.io/skip-outbound-ports: true
            config.linkerd.io/skip-inbound-ports: true
        spec:
          containers:
          - name: hello
            image: busybox:1.35
            command:
            - "sleep"
            - "3600"
          restartPolicy: OnFailure
