linkerd/prevent-linkerd-port-skipping/.chainsaw-test/good-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  name: goodpod02
spec:
  containers:
    - image: busybox:1.35
      name: busybox
      resources: {}
