linkerd/prevent-linkerd-port-skipping/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: prevent-linkerd-port-skipping
policies:
- ../prevent-linkerd-port-skipping.yaml
resources:
- ../.chainsaw-test/bad-pod.yaml
- ../.chainsaw-test/bad-podcontrollers.yaml
- ../.chainsaw-test/good-pod.yaml
- ../.chainsaw-test/good-podcontrollers.yaml
results:
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: Pod
  resources:
  - badpod01
  - badpod02
  - badpod03
  result: fail
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: Deployment
  resources:
  - baddeploy01
  - baddeploy02
  - baddeploy03
  result: fail
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: CronJob
  resources:
  - badcronjob01
  - badcronjob02
  - badcronjob03
  result: fail
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: Pod
  resources:
  - goodpod01
  - goodpod02
  result: pass
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: Deployment
  resources:
  - gooddeploy01
  - gooddeploy02
  result: pass
- policy: prevent-linkerd-port-skipping
  rule: pod-prevent-port-skipping
  kind: CronJob
  resources:
  - goodcronjob01
  - goodcronjob02
  result: pass
